// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.daml.ledger.api.v2.interactive.transaction.v1;

import "com/daml/ledger/api/v2/value.proto";

option csharp_namespace = "Com.Daml.Ledger.Api.V2.Interactive.Transaction.V1";
option java_outer_classname = "InteractiveSubmissionDataOuterClass";
option java_package = "com.daml.ledger.api.v2.interactive.transaction.v1";

/*
 * Transaction Nodes
 */

// Fetch node
message Fetch {
  string contract_id = 1;
  string package_name = 2;
  Identifier template_id = 3;
  repeated string signatories = 4;
  repeated string stakeholders = 5;
  repeated string acting_parties = 6;
}

// Exercise node
message Exercise {
  string contract_id = 1;
  string package_name = 2;
  Identifier template_id = 3;
  repeated string signatories = 4;
  repeated string stakeholders = 5;
  repeated string acting_parties = 6;
  Identifier interface_id = 7;
  string choice_id = 8;
  Value chosen_value = 9;
  bool consuming = 10;
  repeated string children = 11;
  Value exercise_result = 12;
  repeated string choice_observers = 13;
}

// Create Node
message Create {
  string contract_id = 1;
  string package_name = 2;
  Identifier template_id = 3;
  Value argument = 4;
  repeated string signatories = 5;
  repeated string stakeholders = 6;
}

// Rollback Node
message Rollback {
  repeated string children = 1;
}

message Node {
  oneof node_type {
    Create create = 1;
    Fetch fetch = 2;
    Exercise exercise = 3;
    Rollback rollback = 4;
  }
}
